# AliasAnalysis

./: CMakeLists.txt  README.md
include/: AliasAnalysis.h  AliasUtils.h  ContextSensitiveAliasAnalysis.h  ContextSensitivePointsToAnalysis.h  FlowInsensitiveAliasAnalysis.h  FlowInsensitivePointsToAnalysis.h  FlowSensitiveAliasAnalysis.h  FlowSensitivePointsToAnalysis.h
lib/: AliasAnalysis.cpp  AliasUtils.cpp  CMakeLists.txt  ContextSensitiveAliasAnalysis.cpp  ContextSensitivePointsToAnalysis.cpp  FlowInsensitiveAliasAnalysis.cpp  FlowInsensitivePointsToAnalysis.cpp  FlowSensitiveAliasAnalysis.cpp  FlowSensitivePointsToAnalysis.cpp
src/: CMakeLists.txt  Driver.cpp
test/: run.sh  sample.ll
test/src/: simpleStore.c
